Add moderator interfase
