# docs/swagger.yaml
@@ -72,6 +72,10 @@ definitions:
         type: integer
       id:
         type: integer
+      username:
+        type: string
+    required:
+    - username
     type: object
   handler.CreateCostRequest:
     properties:
